<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    
    <groupId>org.openbase</groupId>
    <artifactId>bco.dal</artifactId>
    <version>2.0-SNAPSHOT</version>

    <name>BCO DAL</name>
    <inceptionYear>2014</inceptionYear>
    <description>Domotic Abstraction Layer</description>

    <url>https://github.com/openbase/bco.dal/wiki</url>
    
    <organization>
        <name>openbase.org</name>
        <url>https://github.com/openbase</url>
    </organization>
    
    <developers>
        <developer>
            <id>DivineThreepwood</id>
            <name>Marian Pohling</name>
            <email>divine@openbase.org</email>
            <url>https://github.com/DivineThreepwood</url>
            <organization>openbase.org</organization>
            <organizationUrl>https://github.com/openbase</organizationUrl>
            <roles>
                <role>architect</role>
                <role>developer</role>
            </roles>
            <timezone>+1</timezone>
        </developer>
        <developer>
            <id>pLeminoq</id>
            <name>Tamino Huxohl</name>
            <email>taminoh@ymail.com</email>
            <url>https://github.com/pLeminoq</url>
            <organization>openbase.org</organization>
            <organizationUrl>https://github.com/openbase</organizationUrl>
            <roles>
                <role>architect</role>
                <role>developer</role>
            </roles>
            <timezone>+1</timezone>
        </developer>
    </developers>

    <licenses>
        <license>
            <name>LGPLv3</name>
            <url>http://www.gnu.org/licenses/lgpl.html</url>
        </license>
        <license>
            <name>GPLv3</name>
            <url>http://www.gnu.org/licenses/gpl.html</url>
        </license>
    </licenses>

    <packaging>pom</packaging>

    <scm>
        <connection>scm:git:https://github.com/openbase/bco.dal.git</connection>
        <developerConnection>scm:git:https://github.com/openbase/bco.dal.git</developerConnection>
        <url>https://github.com/openbase/bco.dal.git</url>
    </scm>
    
    <build>
        <plugins>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>license-maven-plugin</artifactId>
                <version>${dependency.org.codehaus.mojo.license-maven-plugin.version}</version>
                <configuration>
                    <verbose>false</verbose>
                    <failOnMissingHeader>true</failOnMissingHeader>
                    <failOnNotUptodateHeader>true</failOnNotUptodateHeader>
                    <canUpdateCopyright>true</canUpdateCopyright>
                    <canUpdateDescription>true</canUpdateDescription>
                    <canUpdateLicense>true</canUpdateLicense>
                    <roots>
                        <root>src/main/java</root>
                        <root>src/test</root>
                    </roots>
                </configuration>
                <executions>
                    <execution> 
                        <id>download-licenses</id>
                        <goals>
                            <goal>download-licenses</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-release-plugin</artifactId>
                <version>2.5.3</version>
                <configuration>
                    <autoVersionSubmodules>true</autoVersionSubmodules>
                    <useReleaseProfile>true</useReleaseProfile>
                    <releaseProfiles>deploy</releaseProfiles>
                    <goals>deploy</goals>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>deploy</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-source-plugin</artifactId>
                        <version>3.0.1</version>
                        <executions>
                            <execution>
                                <id>attach-sources</id>
                                <goals>
                                    <goal>jar-no-fork</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                    <!-- plugin>
                        disabled because of https://bugs.openjdk.java.net/browse/JDK-8212233
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-javadoc-plugin</artifactId>
                        <version>3.1.0</version>
                        <executions>
                            <execution>
                                <id>attach-javadocs</id>
                                <goals>
                                    <goal>jar</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin-->
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-gpg-plugin</artifactId>
                        <version>1.6</version>
                        <executions>
                            <execution>
                                <id>sign-artifacts</id>
                                <phase>verify</phase>
                                <goals>
                                    <goal>sign</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <id>sonatype</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.sonatype.plugins</groupId>
                        <artifactId>nexus-staging-maven-plugin</artifactId>
                        <version>1.6.7</version>
                        <extensions>true</extensions>
                        <configuration>
                            <serverId>ossrh</serverId>
                            <nexusUrl>https://oss.sonatype.org/</nexusUrl>
                            <autoReleaseAfterClose>true</autoReleaseAfterClose>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

    <modules>
	<module>control</module>
        <module>remote</module>
        <module>lib</module>
        <module>task</module>
        <module>visual</module>
        <module>example</module>
        <module>test</module>
    </modules>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <skipTests>true</skipTests>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
        <dependency.org.junit.jupiter.version>[5.5,5.6)</dependency.org.junit.jupiter.version>
        <dependency.rta.lib.version>[1.5,1.6-alpha)</dependency.rta.lib.version>
        <dependency.bco.version>2.0-SNAPSHOT</dependency.bco.version>
        <dependency.jul.version>2.0-SNAPSHOT</dependency.jul.version>
        <dependency.bco.authentication.version>${dependency.bco.version}</dependency.bco.authentication.version>
        <dependency.bco.registry.version>${dependency.bco.version}</dependency.bco.registry.version>
        <dependency.org.codehaus.mojo.license-maven-plugin.version>1.10</dependency.org.codehaus.mojo.license-maven-plugin.version>
        <dependency.com.influxdb.influxdb-client-java.version>[1.0,1.1-alpha)</dependency.com.influxdb.influxdb-client-java.version>
    </properties>
    
    <repositories>
        <repository>
            <id>citec-releases</id>
            <name>CITEC Maven Repository Server</name>
            <url>https://mvn.cit-ec.de/nexus/content/repositories/releases/</url>
            <layout>default</layout>
            <releases>
                <enabled>true</enabled>
            </releases>
        </repository>
        <repository>
            <id>citec-snapshots</id>
            <name>CITEC Maven Repository Server</name>
            <url>https://mvn.cit-ec.de/nexus/content/repositories/snapshots/</url>
            <layout>default</layout>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>
    </repositories>

    <dependencies>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>${dependency.org.junit.jupiter.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.openbase</groupId>
            <artifactId>jul.extension.rsb.scope</artifactId>
            <version>${dependency.jul.version}</version>
        </dependency>
    </dependencies>

    <distributionManagement>
        <snapshotRepository>
            <id>ossrh</id>
            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
        </snapshotRepository>
        <repository>
            <id>ossrh</id>
            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
        </repository>
    </distributionManagement>

</project>
